<resources>
    <string name="app_name">My Shopping List</string>
    <string name="add_shop">Add Shop</string>
    <string name="list_of_stores">List of stores</string>
    <string name="store_name">Store name:</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="error_fill_store_name">The store name needs to be filled</string>
    <string name="name">*Name:</string>
    <string name="product_s_name">Product\'s name</string>
    <string name="product_brand">Product brand:</string>
    <string name="amount">Amount:</string>
    <string name="unit_price">Unit price:</string>
    <string name="comments">Comments:</string>
    <string name="unit_of_measurement">Unit of measurement:</string>
    <string name="item_exists">This item already exists!</string>
    <string name="delete_store_question">Do you want to delete the store and all of its information?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="store_exists">This Store already exists</string>
    <string name="remove_item">Remove Item</string>
    <string name="error_number_input">That is not a number!</string>
    <string name="error_input_price">That is not a price: ex 1, 2, 1.5</string>
    <string name="error_amount">That is not an amount: ex 1, 2, 1.5</string>
    <string name="bought">Bought:</string>
    <string name="buy">Bought</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
