<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dialog_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sincdor.myshoppinglist.DialogItem"
    android:gravity="center"
    android:layout_weight="1">



    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/edit"
        android:onClick="bl_d_edit_item"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete"
        android:onClick="bl_d_delete_item"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cancel"
        android:onClick="bl_d_cancel_item"
        android:layout_weight="1"/>

</LinearLayout>
