<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sincdor.myshoppinglist.EditItemActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/name"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/et_item_name_edit" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/product_brand"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/et_brand_edit" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/amount"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/et_amount_edit" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/unit_price"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/et_price_edit" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textSize="20sp"
            android:text="@string/unit_of_measurement"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/et_unit_edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textSize="20sp"
            android:text="@string/comments"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/et_comments_edit"
            android:lines="5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/button_confirm_item_edit"
            android:onClick="bl_new_item"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_cancel_item_edit"
            android:onClick="bl_cancel_new_item"/>

    </LinearLayout>



</LinearLayout>
