<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_store"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.sincdor.myshoppinglist.NewStoreDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textSize="30sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Ex: Lidl"
        android:id="@+id/store_name"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:onClick="createShop"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:onClick="cancelShop"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</LinearLayout>
