<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_item_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sincdor.myshoppinglist.ItemInfo">

    <TextView
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Queijo"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/tv_item_name"
        android:background="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/amount"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.4"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_amount_edit"
                android:text="Coisas"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_unit_edit"
                android:textSize="20sp"
                android:text="kg"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/unit_price"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:id="@+id/tv_price_edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/product_brand"
            android:textStyle="bold"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/tv_brand_edit"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/comments"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:id="@+id/tv_comments_edit"
            android:maxLines="5"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:paddingTop="20dp"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:id="@+id/button_bought_item_edit"
            android:onClick="bl_bought_item"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_cancel_item_edit"
            android:onClick="bl_cancel_item"/>

    </LinearLayout>


</LinearLayout>
